Fixed alignment of the nhierarchy
Workitems:
#28437 Admin - Users master performance
git-tfs-id: [https://dev.azure.com/inatech]$/Shiptech10/Dev/Frontend;C28787

--- a/ShipTech10/app/css/custom.css
+++ b/ShipTech10/app/css/custom.css
@@ -4956,7 +4956,7 @@ table.energyCalculationBlade tr.border-green-jungle {
 
 
 #hierarchical-tree .search-list-user {
-    padding-left: 15px;
+    padding-left: 20px;
 }
 
 #hierarchical-tree .element-user-screen {
